--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,85 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}">
+
+    <script type="text/javascript" th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.js}"></script>
+
+    <title>My Project</title>
+</head>
+
 <body>
 
-    <div>
+    <div class="container-fluid p-2">
 
-        <h2>Hello My Project</h2>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light" aria-label="My Project Navbar">
+            <div class="container-fluid">
+                <a th:href="@{/}">
+                    <img class="img-fluid" th:src="@{/images/myLogo1.png}" style="height:50px" />
+                </a>
+
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsMyProject" aria-controls="navbarsMyProject" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="navbar-collapse collapse" id="navbarsMyProject">
+                    <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
+                        </li>
+
+                        <li id="myDropdownMenu" class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                                aria-expanded="false">User</a>
+                            <ul class="dropdown-menu">
+                                <li><a id="dropdownMenuItemCreate" class="dropdown-item" href="#">Creat</a></li>
+                                <li><a id="dropdownMenuItemView" class="dropdown-item" href="#">View</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <div>
-            <h1>[[${message}]]</h1>
+
+            <h2>Hello My Project</h2>
+
+            <div>
+                <h1>[[${message}]]</h1>
+            </div>
+
         </div>
 
     </div>
+
+    <script type="text/javascript">
+        const myDropdownMenu = document.getElementById("myDropdownMenu")
+        const dropdownMenuItemCreate = document.getElementById("dropdownMenuItemCreate");
+        const dropdownMenuItemView = document.getElementById("dropdownMenuItemView");
+
+        myDropdownMenu.addEventListener('show.bs.dropdown', event => {
+            console.log('myDropdownMenu ::: opening...');
+        });
+
+        dropdownMenuItemCreate.addEventListener("click", event => {
+            console.log("dropdownMenuItemCreate ::: click");
+        });
+
+        dropdownMenuItemView.addEventListener("click", event => {
+            console.log("dropdownMenuItemView ::: click");
+        });
+
+        myDropdownMenu.addEventListener('hide.bs.dropdown', event => {
+            console.log('myDropdownMenu ::: closing...');
+        });
+    </script>
 
 </body>
 
