--- a/src/main/resources/templates/users/user_form.html
+++ b/src/main/resources/templates/users/user_form.html
@@ -15,7 +15,48 @@
 
         </div>
 
-        <form method="post" th:object="${user}">
+        <div th:if="${message != null}" class="alert alert-success text-center">
+            [[${message}]]
+        </div>
+
+        <form  method="post" th:object="${user}">
+
+            <div class="border border-secondary rounded p-3">
+
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-lable">E-mail</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" type="email" th:field="*{email}" minlength="8" maxlength="128" required />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-lable">First Name</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" type="text" th:field="*{firstName}" minlength="2" maxlength="45" required />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-lable">Last Name</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" type="text" th:field="*{lastName}" minlength="2" maxlength="45" required />
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-lable">Password</label>
+                    <div class="col-sm-8">
+                        <input class="form-control" type="password" th:field="*{password}" minlength="2" maxlength="45" required />
+                    </div>
+                </div>
+
+                <div class="text-center">
+                    <input class="btn btn-primary m-2" type="submit" value="Save" />
+                    <input class="btn btn-secondary m-2" type="button" value="Cancel" />
+                </div>
+
+            </div>
 
         </form>
 
