added new codes

--- a/src/main/resources/templates/users/user_form.html
+++ b/src/main/resources/templates/users/user_form.html
@@ -19,7 +19,7 @@
             [[${message}]]
         </div>
 
-        <form  method="post" th:object="${user}">
+        <form th:action="@{/users/save}" method="post" th:object="${user}">
 
             <div class="border border-secondary rounded p-3">
 
