added new codes

--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -28,7 +28,7 @@
                                 aria-expanded="false">Users</a>
                             <ul class="dropdown-menu">
                                 <li><a id="dropdownMenuItemCreate" class="dropdown-item" th:href="@{/users/new}">Creat</a></li>
-                                <li><a id="dropdownMenuItemView" class="dropdown-item" href="#">View</a></li>
+                                <li><a id="dropdownMenuItemView" class="dropdown-item" th:href="@{/users}">View</a></li>
                             </ul>
                         </li>
                     </ul>
