--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -34,18 +34,11 @@
                         </tr>
                     </thead>
 
-                    <tbody th:each="user : ${listAllUsers}">
-                        <tr>
+                    <tbody>
+                        <tr th:each="user : ${listAllUsers}">
                             <th>[[${user.id}]]</th>
                             <th>[[${user.firstName}]]</th>
                             <th>[[${user.lastName}]]</th>
-                            <th><a href="">Edit</a></th>
-                            <th><a href="">Delete</a></th>
-                        </tr>
-                        <tr>
-                            <th>safsdaf</th>
-                            <th>asfsd</th>
-                            <th>afdssadf</th>
                             <th><a href="">Edit</a></th>
                             <th><a href="">Delete</a></th>
                         </tr>
