--- a/src/main/resources/templates/users/user_form.html
+++ b/src/main/resources/templates/users/user_form.html
@@ -20,7 +20,7 @@
         </div>
 
         <form th:action="@{/users/save}" method="post" th:object="${user}">
-
+            <input type="hidden" th:field="*{id}"/>
             <div class="border border-secondary rounded p-3">
 
                 <div class="form-group row">
