--- a/src/main/resources/templates/users/user_form.html
+++ b/src/main/resources/templates/users/user_form.html
@@ -20,33 +20,33 @@
         </div>
 
         <form th:action="@{/users/save}" method="post" th:object="${user}">
-            
+
             <input type="hidden" th:field="*{id}"/>
 
             <div class="border border-secondary rounded p-3">
 
-                <div class="form-group row">
+                <div class="form-group row m-2">
                     <label class="col-sm-4 col-form-lable">E-mail</label>
                     <div class="col-sm-8">
                         <input class="form-control" type="email" th:field="*{email}" minlength="8" maxlength="128" required />
                     </div>
                 </div>
 
-                <div class="form-group row">
+                <div class="form-group row m-2">
                     <label class="col-sm-4 col-form-lable">First Name</label>
                     <div class="col-sm-8">
                         <input class="form-control" type="text" th:field="*{firstName}" minlength="2" maxlength="45" required />
                     </div>
                 </div>
 
-                <div class="form-group row">
+                <div class="form-group row m-2">
                     <label class="col-sm-4 col-form-lable">Last Name</label>
                     <div class="col-sm-8">
                         <input class="form-control" type="text" th:field="*{lastName}" minlength="2" maxlength="45" required />
                     </div>
                 </div>
 
-                <div class="form-group row">
+                <div class="form-group row m-2">
                     <label class="col-sm-4 col-form-lable">Password</label>
                     <div class="col-sm-8">
                         <input class="form-control" type="password" th:field="*{password}" minlength="2" maxlength="45" required />
