--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -40,7 +40,7 @@
                             <th>[[${user.firstName}]]</th>
                             <th>[[${user.lastName}]]</th>
                             <th><a th:href="@{/users/edit/} + ${user.id}">Edit</a></th>
-                            <th><a href="">Delete</a></th>
+                            <th><a th:href="@{/users/delete/} + ${user.id}">Delete</a></th>
                         </tr>
                     </tbody>
 
